--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
         "url": "git@github.com:peter-mouland/frayifier.git"
     },
     "scripts": {
-      "copy": "caddy copy",
-      "build": "caddy build",
-      "bump": "caddy bump",
-      "release": "npm test && caddy release",
-      "report": "caddy serve test/coverage/phantomjs/",
-      "start": "caddy copy && caddy build -dev && caddy serve",
-      "tdd": "caddy test tdd",
-      "test": "jshint src && caddy build && caddy test"
+      "build": "component build",
+      "bump": "component bump",
+      "release": "npm test && component release",
+      "report": "component serve test/coverage/phantomjs/",
+      "start": "component build && component serve",
+      "tdd": "component test tdd",
+      "test": "jshint src && component build && component test"
     },
     "devDependencies": {
       "browserify-istanbul": "^0.2.1",
-      "web-caddy" : "2.0.0-beta.3",
+      "component-helper" : "1.3.1-rc.1",
       "jshint": "^2.6.3"
     },
     "author": "Peter Mouland"
